<resources>
    <string name="app_name">Ban Lễ Sinh</string>
    <string name="hint_username">Tên đăng nhập</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="remember">Nhớ thông tin đăng nhập</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="kh_ng_c_k_t_n_i_m_ng">Không có kết nối mạng</string>
    <string name="th_l_i">Thử lại</string>
    <string name="th_m_l_sinh">Thêm Lễ Sinh</string>
    <string name="chinh_su_le_sinh">Chỉnh sửa Lễ Sinh</string>
    <string name="t_n_th_nh">Tên Thánh</string>
    <string name="ho">Họ</string>
    <string name="ten">Tên</string>
    <string name="ng_y_sinh">Ngày</string>
    <string name="thangsinh">Tháng</string>
    <string name="namsinh">Năm sinh</string>
    <string name="li_n_l_c">Liên lạc</string>
    <string name="a_ch">Địa chỉ</string>
    <string name="lienlac">lienlac</string>
    <string name="diachi">diachi</string>
    <string name="th_m">THÊM</string>
    <string name="hu">HUỶ</string>
    <string name="capnhat">Cập nhật</string>
    <string name="remove">Xoá</string>
    <string name="oops">OOPS!</string>
    <string name="responseError">Đã xảy ra lỗi</string>
    <string name="pleaseType">Vui lòng nhập đầy đủ thông tin</string>
    <string name="this_is_custom_toast">This is Custom Toast.</string>
    <string name="strikethrough">-</string>
</resources>