<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".ui.AddAltarboy">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/themlesinh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/th_m_l_sinh"
                android:textColor="@color/main"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/them_tenthanh"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/themlesinh"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/t_n_th_nh"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingHorizontal="18dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/hint"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/hoten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/them_tenthanh"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <EditText
                    android:id="@+id/them_ho"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/ho"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingHorizontal="18dp"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/hint"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/them_ten"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="2"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/ten"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingHorizontal="18dp"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/hint"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ngaythangnamsinh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hoten"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <EditText
                    android:id="@+id/them_ngaysinh"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/ng_y_sinh"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:paddingHorizontal="18dp"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/hint"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/them_thangsinh"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/thangsinh"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:paddingHorizontal="18dp"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/hint"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/them_namsinh"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/namsinh"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:paddingHorizontal="18dp"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/hint"
                    android:textSize="18sp" />
            </LinearLayout>


            <EditText
                android:id="@+id/them_lienlac"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/ngaythangnamsinh"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/li_n_l_c"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingHorizontal="18dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/hint"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/them_diachi"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@+id/them_lienlac"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/a_ch"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:paddingHorizontal="18dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/hint"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/them_diachi"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_them"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginEnd="30dp"
                    android:elevation="2dp"
                    android:text="@string/th_m"
                    android:textColor="@color/bg_color"
                    app:cornerRadius="200dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_huy"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginStart="30dp"
                    android:layout_toEndOf="@+id/button_them"
                    android:backgroundTint="@color/bg_color"
                    android:elevation="2dp"
                    android:text="@string/hu"
                    android:textColor="@color/main"
                    app:cornerRadius="200dp"
                    app:strokeColor="@color/main"
                    app:strokeWidth="2dp" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
